--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			<link rel="icon" type="image/png" href="assets/img/favicon.png">
 			<!-- TITLE -->
 			<title>Divinas Gerais</title>
+
+			<!-- Metadados Open Graph -->
+			<meta property="og:title" content="Divinas Gerais">
+			<meta property="og:description" content="Um tour completo pelo Universo Divinas">
+			<meta property="og:image" content="https://siteinsightwebdata.github.io/DivinasGerais-site/assets/img/home-one/about.jpg">
+			<meta property="og:url" content="https://siteinsightwebdata.github.io/DivinasGerais-site/">
+			<meta property="og:type" content="website">
     </head>
 
     <body>
